Run WPT parsing test suite
The build script from WPT was adapted to generate separate js files that are then eval()d as part of a mocha test run

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/annevk/webvtt/issues"
   },
   "homepage": "https://github.com/annevk/webvtt",
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
+  },
   "dependencies": {}
 }
