--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "webvtt-parser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "WebVTT parser and validator",
   "main": "parser.js",
+  "files": ["parser.js"],
   "scripts": {
     "test": "mocha"
   },
