Include html-entities.json in package

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "webvtt-parser",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "WebVTT parser and validator",
   "main": "parser.js",
-  "files": ["parser.js"],
+  "files": ["parser.js", "html-entities.json"],
   "scripts": {
     "test": "mocha"
   },
