--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
       with:
         node-version: 16
     - name: Setup dependencies
-      run: npm ci
+      run: npm install
     - name: Run tests
       run: npm test
