--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "webvtt-parser",
   "type": "module",
-  "version": "2.2.0",
-  "description": "WebVTT parser and validator",
-  "main": "parser.js",
-  "files": ["parser.js", "html-entities.json"],
+  "name": "webvtt-parser-esm",
+  "version": "1.0.0",
+  "description": "Non-official WebVTT parser and validator. ESM compatible fork of original w3c/webvtt.js ver.2.2.0.",
+  "main": "parser.mjs",
+  "files": [
+    "parser.mjs",
+    "html-entities.json"
+  ],
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/w3c/webvtt.js.git"
+    "url": "https://github.com/BohdanVovkotrub/webvtt.js.git"
   },
   "keywords": [
     "WebVTT"
   ],
   "author": "Anne van Kesteren <annevk@annevk.nl>",
-  "contributors": [],
+  "maintainers": [
+    {
+      "name": "Bohdan Vovkotrub",
+      "email": "bvovkotrub@gmail.com",
+      "url": "https://github.com/BohdanVovkotrub/webvtt.js"
+    }
+  ],
+  "contributors": [
+    "Anne van Kesteren <annevk@annevk.nl>",
+    "Bohdan Vovkotrub <bvovkotrub@gmail.com>"
+  ],
   "license": "CC0-1.0",
   "bugs": {
-    "url": "https://github.com/w3c/webvtt.js/issues"
+    "url": "https://github.com/BohdanVovkotrub/webvtt.js/issues"
   },
-  "homepage": "https://github.com/w3c/webvtt.js",
+  "homepage": "https://github.com/BohdanVovkotrub/webvtt.js",
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.0.1"
-  },
-  "dependencies": {}
+  }
 }
